--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <a href="" class="nav nav-link">Profile</a>
                     </li>   
                     <li class="nav-item">
-                        <a href="" class="nav nav-link">Portfolio</a>
+                        <a href="index.html#section-4" class="nav nav-link">Portfolio</a>
                     </li>  
                     <li class="nav-item">
                         <a href="" class="nav nav-link">Contact Me</a>
@@ -61,7 +61,7 @@
             <div class="section-4">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-5">
+                        <div class="col-md-7">
                             <h1>My Profile</h1>
                             <p class="para-1">
                                     Web Developer with experience in developing and implementing interactive websites.
@@ -70,8 +70,8 @@
                                     trained with lesser effort in a short period of time.
                             </p>
                         </div>
-                        <div class="col-md-7">
-                            <img src="images/abstract-bright-colorful-268941.jpg" alt="ProfilePic" width="350"> 
+                        <div class="col-md-5">
+                            <img src="images/myProfile.jpg" alt="ProfilePic" class="my-profile"> 
                         </div>
                     </div>
                 </div>
@@ -80,7 +80,7 @@
             
             <div class="section-2 bg-dark">
                 <div class="container text-center">
-                    <h1 class="heading-1 text-white">Skills</h1>
+                    <h1 class="heading-3 text-white p-4">Skills</h1>
                     <div class="row justify-content-center text-center p-6">
                         <div class="col-md-2">
                             <img src="images/angular.png" alt="Coba" width="100px"> 
@@ -116,9 +116,9 @@
                     <div class="row justify-content-center text-center">
                         <div class="col-md-4 col-sm-12">
                             <div class="card" style="width:20rem;">
-                                <img src="images/abstract-bright-colorful-268941.jpg" alt="Coba" class="card-img-top"> 
+                                <img src="images/COBA.png" alt="Coba" class="card-img-top"></a>
                                 <div class="card-body">
-                                    <h4 class="card-title">Coba</h4>
+                                    <a href="https://www.codegakko.com/coba" style="color:black; text-decoration: underline;"><h4 class="card-title">Coba</h4></a>
                                     <p class="card-text">The Software Platform is similar to Tynker but targeted on School Institutions to formalize teaching
                                             programming to Grade School. The project utilizes latest Web Development technology Angular 5, ReactJS,
                                             Node.js, Python and open source Scrath 2.0 Application. The ultimate aim of the platform is to provide a
@@ -129,9 +129,9 @@
                         </div>
                         <div class="col-md-4 col-sm-12">
                             <div class="card" style="width:20rem;">
-                                <img src="images/abstract-bright-colorful-268941.jpg" alt="Coba" class="card-img-top"> 
+                                <img src="images/TRIP.png" alt="Coba" class="card-img-top"> 
                                 <div class="card-body">
-                                    <h4 class="card-title">Tourism Road Infrastructure Program (TRIP)</h4>
+                                    <a href="http://ipropose.co/trippc" style="color:black; text-decoration: underline;"><h4 class="card-title">Tourism Road Infrastructure Program (TRIP)</h4></a>
                                     <p class="card-text">The Department of Tourism (DOT) forged a convergence with the Department of Public Works and Highways
                                             (DPWH) that seeks to boost tourism infrastructure projects in priority tourist destination areas in the
                                             Philippines under a “Convergence Program for Enhancing Tourism Access.”
@@ -141,9 +141,9 @@
                         </div>
                         <div class="col-md-4 col-sm-12">
                             <div class="card" style="width:20rem;">
-                                <img src="images/abstract-bright-colorful-268941.jpg" alt="Coba" class="card-img-top"> 
+                                <img src="images/PICE.png" alt="Coba" class="card-img-top">
                                 <div class="card-body">
-                                    <h4 class="card-title">Philippine Institute of Civil Engineering Membership Portal</h4>
+                                    <a href="https://membership.pice.org.ph/" style="color:black; text-decoration: underline;"><h4 class="card-title">Philippine Institute of Civil Engineering Membership Portal</h4></a>
                                     <p class="card-text">PICE Membership Portal is a migration from a 20 year old system Fox Pro System to Web based Technology.
                                             Now, PICE Member can check the status of their Membership Portal Information and perform additional
                                             services online.
