--- a/index.html
+++ b/index.html
@@ -37,11 +37,6 @@
                     </li>  
                 </ul>
 
-                <form class="form-inline my-2 my-lg-0">
-                    <button class="btn menu-right-btn border" type="submit">
-                        Template
-                    </button>
-                </form>
             </div>
         </nav>
 
@@ -154,10 +149,38 @@
                     </div>
                 </div>
             </div>
-
-
         </main>
     </header>
+
+    <footer>
+        <div class="container-fluid">
+            <div class="row justify-content-center text-center">
+                <div class="col-md-4">
+                    <hr class="light">
+                    <h4>Contact Me</h4>
+                    <hr class="light">
+                    <p>+63 919 863 3198</p>
+                    <p>patrickgeda614@gmail.com</p>
+                    <p>Manila, NCR</p>
+                </div>
+                <div class="col-md-4 social">
+                    <hr class="light">
+                    <h4>Connect with me</h4>
+                    <hr class="light">
+                    <a href="https://www.facebook.com/patrick.geda"><i class="fab fa-facebook px-2"></i></a>
+                    <a href="mailto:patrickgeda614@gmail.com"><i class="fab fa-google-plus-g px-2"></i></a>
+                    <a href=""><i class="fab fa-youtube px-2"></i></a>
+                </div>
+                <div class="col-md-4">
+                    <hr class="light">
+                    <h4>Download CV</h4>
+                    <hr class="light">
+                    <i class="fas fa-file-pdf"></i>
+                    <a href="images/Patrick Henry C. Geda Resume 2018.pdf" download style="color:#d5d5d5"><p>Download PDF</p></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
